src/elements/content-sidebar/DocGenSidebar/DocGenSidebar.scss
@import '../../../styles/variables';

.docgen-sidebar {
    padding: 20px 24px 0 24px;
}

.center {
    display: flex;
    justify-content: center;
}

.docgen-tag-section {
    margin-top: 16px;
    padding-bottom: 16px;
    border-bottom: 1px solid #e8e8e8;
}

.docgen-tag-section-header {
    font-weight: normal;
    font-size: 12px;
    line-height: 14px;
}

.docgen-tag-path {
    display: block;
    height: 32px;
    padding: 6px 12px;
    font-weight: bold;
    font-family: 'Lato', sans-serif;
    border-radius: 6px;

    &:hover {
        background: #e8e8e8;
    }
}

.docgen-empty-state {
    position: absolute;
    top: 40%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.docgen-error-state {
    position: absolute;
    top: 40%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

